# copy-service

./: .gitignore  Cargo.toml  Config.toml  README.md  client.py  copy2.c  install.sh  run.sh
lib/: config.py  executor.py  sample_create.py  sample_error.py  samples.py
lib/models/: requests.py  responses.py
src/: main.rs
src/client/: client.rs  handlers.rs  mod.rs  requests.rs  responses.rs
src/models/: config.rs  copy.rs  job.rs  mod.rs  types.rs
src/services/: copy.rs  mod.rs  storage.rs  validate.rs
